# pettingzoo-dilemmas

./: LICENSE  README.md  example.py  main.py  pyproject.toml  requirements.txt  runtests.py
dilemmas/matching_pennies/: test_matching_pennies.py
dilemmas/matching_pennies/env/: __init__.py
dilemmas/prisoners_dilemma/: prisoners_dilemma_v0.py
dilemmas/prisoners_dilemma/env/: __init__.py
dilemmas/stag_hunt/: test_stag_hunt.py
dilemmas/stag_hunt/env/: __init__.py  stag_hunt.py
dilemmas/subsidy_game/: test_subsidy_game.py
dilemmas/subsidy_game/env/: __init__.py  subsidy_game.py
envs/matching_pennies/: matching_pennies_v0.py
envs/matching_pennies/env/: matching_pennies.py
envs/prisoners_dilemma/: prisoners_dilemma_v0.py  test_prisoners_dilemma_v0.py
envs/prisoners_dilemma/env/: prisoners_dilemma.py
matching_pennies/: matching_pennies.py  test_matching_pennies.py
pettingzoo_dilemmas/: __init__.py
pettingzoo_dilemmas/custom/: __init__.py  custom.py
pettingzoo_dilemmas/factory/: factory.py
pettingzoo_dilemmas/matching_pennies/: matching_pennies_v0.py
pettingzoo_dilemmas/matching_pennies/env/: matching_pennies.py
pettingzoo_dilemmas/matrix_game/: matrix_game_v0.py
pettingzoo_dilemmas/matrix_game/env/: matrix_game.py
pettingzoo_dilemmas/prisoners_dilemma/: prisoners_dilemma_v0.py
pettingzoo_dilemmas/prisoners_dilemma/env/: prisoners_dilemma.py
pettingzoo_dilemmas/stag_hunt/: stag_hunt_v0.py
pettingzoo_dilemmas/stag_hunt/env/: stag_hunt.py
pettingzoo_dilemmas/subsidy_game/: subsidy_game_v0.py
(+1 files in other folders)
