[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pettingzoo_dilemmas"
version = "0.0.1"
authors = [
  { name="Maxime Rochkoulets", email="mrochkoulets@gmail.com" },
]
description = "PettingZoo environments for 4 classical matrix games: Prisoner's Dilemma, Stag Hunt, Matching Pennies and Subsidy Game."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/mrochk/pettingzoo-dilemmas"

[tool.hatch.build.targets.wheel]
packages = ["dilemmas"]
