[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pettingzoo-dilemmas"
version = "0.0.1"
authors = [
  { name="Maxime Rochkoulets", email="mrochkoulets@gmail.com" },
]
description = "PettingZoo environment for matrix games."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["pettingzoo", "gymnasium"]

[project.urls]
Homepage = "https://github.com/mrochk/pettingzoo-dilemmas"

[tool.hatch.build.targets.wheel]
packages = ["dilemmas"]
